--- a/css/monopoly.css
+++ b/css/monopoly.css
@@ -222,3 +222,9 @@ body{
 .dice-dot.right{
     margin-left:36%;
 }
+
+.jailed {
+    background-image:url(https://cdn.shopify.com/s/files/1/1061/1924/products/Crying_Face_Emoji_large.png?v=1480481052);
+    background-size:contain;
+    background-position:center;
+}
